# pat

./: .gitignore  README.md
homelab_backend/: .gitignore  Cargo.toml  README.md
homelab_backend/design/: hl-0-reminders.md  hl-1-connections-game.md  hl-2-messaging.md  hl-3-tasks.md
homelab_backend/external_tests/: user.chs
homelab_backend/migrations/: 20240201024311_init.sql
homelab_backend/src/: app.rs  db.rs  error_handler.rs  logger.rs  main.rs  util.rs
homelab_backend/src/api/: chat_controller.rs  games_controller.rs  log_controller.rs  mod.rs  reminder_controller.rs  return_data.rs  user_controller.rs
homelab_backend/src/api/chat_controller/: chat_websocket.rs  mod.rs
homelab_backend/src/api/logs/: db.rs  mod.rs  tasks.rs
homelab_backend/src/api/notes/: mod.rs
homelab_backend/src/api/user/: db.rs  jwt.rs  mod.rs  util.rs
homelab_backend/src/db/: db_setup.rs  mod.rs  resource_kinds.rs
homelab_backend/src/models/: mod.rs
homelab_backend/src/models/chat/: chat_channel.rs  chat_channel_db.rs  message.rs  message_db.rs  mod.rs  packet.rs  validation.rs
homelab_backend/src/models/games/: games_db.rs  mod.rs  validation.rs
homelab_backend/src/models/log/: log_db.rs  mod.rs
homelab_backend/src/models/reminder/: mod.rs  reminder_db.rs  validation.rs
homelab_backend/src/models/user/: jwt.rs  (+3 more)
homelab_backend/src/tasks/: log_creation_task.rs  mod.rs  task_manager.rs
homelab_backend/src/testing/: chat_testing.rs  games_testing.rs  log_testing.rs  mod.rs  reminder_testing.rs  user_testing.rs
homelab_backend/testing/: config.toml  test.chs
(+48 files in other folders)
