[package]
name = "homelab_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {  version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.1"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["full", "util"] }
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "sqlite" ] }
rand = "0.8.5"
sha2 = "0.10.8"
jsonwebtoken = "9.3.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
http-body-util = "0.1.0"
